# snakemake-storage-plugin-s3

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_storage_plugin_s3/: __init__.py
tests/: tests.py
