[tool.poetry]
name = "snakemake-storage-plugin-s3"
version = "0.2.6"
description = "A Snakemake storage plugin for S3 API storage (AWS S3, MinIO, etc.)"
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"
homepage = "https://github.com/snakemake/snakemake-storage-plugin-s3"


[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.12.0"
snakemake-interface-storage-plugins = "^3.0.0"
boto3 = "^1.28.55"
botocore = "^1.31.55"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.2"
snakemake = {git="https://github.com/snakemake/snakemake.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
